--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </p>
         <a class="cta" href="#contact">Let's talk</a>
       </div>
-      <div class="profile">Photo<br/>(replace)</div>
+      <div class="profile" style="background-image: url('img/giuliana-barnuevo-bio.jpg');"></div>
+
     </section>
 
     <!-- ===== Work Experience Section ===== -->
@@ -200,3 +201,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
